# payroll_manager

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  alembic.ini  main.py  pyproject.toml  pyrightconfig.json  requirements.txt
alembic/: env.py
alembic/versions/: b3c96ab5a23c_add_auth_fields_to_employee.py
app/: db.py  models.py  schemas.py  security.py
app/routes/: auth.py  employee.py
