[project]
name = "payroll-manager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.12.1",
    "certifi==2026.1.4",
    "cfgv==3.5.0",
    "click==8.3.1",
    "distlib==0.4.0",
    "dnspython==2.8.0",
    "email-validator==2.3.0",
    "fastapi-cli==0.0.24",
    "fastapi-cloud-cli==0.13.0",
    "fastapi[standard]==0.133.0",
    "fastar==0.8.0",
    "filelock==3.24.3",
    "greenlet==3.3.2",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httptools==0.7.1",
    "httpx==0.28.1",
    "identify==2.6.16",
    "idna==3.11",
    "jinja2==3.1.6",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.3",
    "mdurl==0.1.2",
    "nodeenv==1.10.0",
    "passlib[bcrypt]>=1.7.4",
    "platformdirs==4.9.2",
    "pre-commit==4.5.1",
    "psycopg2==2.9.11",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pydantic-extra-types==2.11.0",
    "pydantic-settings==2.13.1",
    "pygments==2.19.2",
    "python-dotenv==1.2.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart==0.0.22",
    "pyyaml==6.0.3",
    "rich==14.3.3",
    "rich-toolkit==0.19.7",
    "rignore==0.7.6",
    "ruff==0.15.2",
    "sentry-sdk==2.53.0",
    "shellingham==1.5.4",
    "sqlalchemy==2.0.47",
    "sqlmodel==0.0.37",
    "starlette==0.52.1",
    "typer==0.24.1",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "urllib3==2.6.3",
    "uvicorn==0.41.0",
    "uvloop==0.22.1",
    "virtualenv==20.39.0",
    "watchfiles==1.1.1",
    "websockets==16.0",
]
